Completed exercises, lots of fun.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link>
   </head>
   <body>
-  	<h1>This is just Javascript practice yo!</h1>\
+  	<h1>This is just Javascript practice yo!</h1>
   <script src="main.js"></script>
   </body>
 </html>
