Tweaked the html for a fun marguee scroll

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link>
   </head>
   <body>
-  	<h1>This is just Javascript practice yo!</h1>
+  	<marquee>This is just Javascript practice yo!</marquee>
   <script src="main.js"></script>
   </body>
 </html>
