--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link>
   </head>
   <body>
-  	<marquee>This is just Javascript practice yo!</marquee>
+  	<marquee direction="down" width="1000px" height="2000px" behavior="alternate" style="font-style: bold; color: red; font-size: 50px;">
+  		<marquee behavior="alternate">This is just Javascript practice yo!</marquee>
+  	</marquee>
   <script src="main.js"></script>
   </body>
 </html>
