Added a new javascript file as old one was getting long, added challenges from today

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   	<marquee direction="down" width="1000px" height="2000px" behavior="alternate" style="font-style: bold; color: red; font-size: 50px;">
   		<marquee behavior="alternate">This is just Javascript practice yo!</marquee>
   	</marquee>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <script src="newMain.js"></script>
   </body>
 </html>
